@@ -8,6 +8,12 @@ Changes for 0.98.x
   Axes.patch, Axes.axesFrame renamed Axes.frame, Axes.get_frame, which
   returns Axes.patch, is deprecated.  Examples and users guide updated
 
+* Changes in the ContourLabeler attributes (clabel function) so that they
+  all have a form like .labelAttribute.  The three attributes that are most
+  likely to be used by end users, .cl, .cl_xy and .cl_cvalues have been
+  maintained for the moment (in addition to their renamed versions), but they
+  are depricated and will eventually be removed.
+
 Changes for 0.98.1
 ==================
 
